--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   google_maps_flutter: ^2.0.9
+  data: ^0.7.1
 
 dev_dependencies:
   flutter_test:
